tests/resources/invalid/type/definition/non_mutable_in_call_chain.mamba
class A
    def b: B := B()

class B
    def fin c: C := C()

class C
    def d: D := D()

class D
    def e: Int := 100

def a := A()
a.b.c.d.e := 20
